--- a/AsciiArtMovie/AsciiArtMovie.html
+++ b/AsciiArtMovie/AsciiArtMovie.html
@@ -198,7 +198,7 @@
 <body onload="init()">
     <p>アスキーアート動画変換</p>
     <input type="file" accept="video/*" onchange="loadVideo(this.files)">
-    暗←<input type="text" id="aaText" value="MS%BG&SC?<i;:^-.">→明
+    暗←<input type="text" id="aaText" value="BEFHTLI.">→明
     <input type="checkbox" id="color">カラー
     <input type="button" id="convert" value="変換" onclick="startConvert()">
     <input type="button" value="停止" onclick="stopConvert()">
