--- a/Crystal_Growth/Quarts.html
+++ b/Crystal_Growth/Quarts.html
@@ -104,3 +104,11 @@
         const update = () => {
             //粒子のブラウン運動と凝集
         }
+
+
+        </head>
+
+<body>
+    <style>body{background-color:#FFFFFF</style>
+
+</body>
