--- a/Crystal_Growth/Quarts.html
+++ b/Crystal_Growth/Quarts.html
@@ -1,220 +1,224 @@
 <!DOCTYPE html>
 <html>
 
-    <head>
-        <meta charset="UTF-8">
-        <title>3D拡律速凝集</title>
-        <script src="three.js"></script>
-        <script src="BufferGeometryUtils.js"></script>
-        <script>
-        let scene, camera, renderer; //シーン、カメラ、レンダラー
-        let num, time, request; //粒子、経過時間リクエスト
-        let cluster = new Array(),
-            clusterMesh = new Array(); //クラスター
-        let particles = new Array(),
-            particlesMesh = null; //粒子
-        //クラスター用粒子データ（差分位置、半径）
-        const d = [
-            [-0.5, -0.5, -0.5, 0, 3],
-            [-0.5, -0.5, 0.5, 0, 3],
-            [-0.5, 0.5, -0.5, 0, 3],
-            [-0.5, 0.5, 0.5, 0, 3],
-            [0.5, -0.5, -0.5, 0, 3],
-            [0.5, -0.5, 0.5, 0, 3],
-            [0.5, 0.5, -0.5, 0, 3],
-            [0.5, 0.5, 0.5, 0, 3],
-            [0, 0, 0, 0, 6]
-        ];
+<head>
+  <meta charset="UTF-8" />
+  <title>3D拡律速凝集</title>
+  <script src="three.js"></script>
+  <script src="BufferGeometryUtils.js"></script>
+  <script>
+    let scene, camera, renderer; //シーン、カメラ、レンダラー
+    let num, time, request; //粒子、経過時間リクエスト
+    let cluster = new Array(),
+      clusterMesh = new Array(); //クラスター
+    let particles = new Array(),
+      particlesMesh = null; //粒子
+    //クラスター用粒子データ（差分位置、半径）
+    const d = [
+      [-0.5, -0.5, -0.5, 0, 3],
+      [-0.5, -0.5, 0.5, 0, 3],
+      [-0.5, 0.5, -0.5, 0, 3],
+      [-0.5, 0.5, 0.5, 0, 3],
+      [0.5, -0.5, -0.5, 0, 3],
+      [0.5, -0.5, 0.5, 0, 3],
+      [0.5, 0.5, -0.5, 0, 3],
+      [0.5, 0.5, 0.5, 0, 3],
+      [0, 0, 0, 0, 6],
+    ];
 
-        const init = () => {
-        //シーン、透視撮影カメラ、レンダラー、ライトの作成
-            scene = new THREE.Scene();
-            camera = new THREE.PerspectiveCamera(60, 1, 1, 1000);
-            renderer = new THREE.WebGLRenderer({
-                antialias: true
-            });
-            renderer.setSize(600, 600);
-            document.getElementById("renderArea").appendChild(renderer.domElement);
-            const light = new THREE.DirectionalLight("#FFFFFF");
-            light.position.set(25, 100, 25);
-            scene.add(light);
-            const ambientLight = new THREE.AmbientLight("#333333");
-            scene.add(ambientLight);
-            document.getElementById("stop").disabled = true;
-            setCamera();
+    const init = () => {
+      //シーン、透視撮影カメラ、レンダラー、ライトの作成
+      scene = new THREE.Scene();
+      camera = new THREE.PerspectiveCamera(60, 1, 1, 1000);
+      renderer = new THREE.WebGLRenderer({
+        antialias: true,
+      });
+      renderer.setSize(600, 600);
+      document.getElementById("renderArea").appendChild(renderer.domElement);
+      const light = new THREE.DirectionalLight("#FFFFFF");
+      light.position.set(25, 100, 25);
+      scene.add(light);
+      const ambientLight = new THREE.AmbientLight("#333333");
+      scene.add(ambientLight);
+      document.getElementById("stop").disabled = true;
+      setCamera();
+    };
+
+    const setCamera = () => {
+      //カメラ位置の変更
+      const angle = Number(document.getElementById("angle").value);
+      document.getElementById("textAngle").innerText = angle;
+      camera.position.x = 75 * Math.cos((angle * Math.PI) / 180) + 25;
+      camera.position.y = 60;
+      camera.position.z = 75 * Math.sin((angle * Math.PI) / 180) + 25;
+      camera.lookAt(new THREE.Vector3(25, 25, 25));
+      renderer.render(scene, camera);
+    };
+
+    //geometry　→　幾何学、形状
+    const startDLA = () => {
+      if (particlesMesh != null) {
+        scene.remove(particlesMesh);
+        particlesMesh.material.dispose();
+        particlesMesh.geometry.dispose();
+      }
+      for (const mesh of clusterMesh) {
+        scene.remove(mesh);
+        mesh.material.dispose();
+        mesh.geometry.dispose();
+      }
+      clusterMesh = [];
+      //粒子の作成
+      num = document.getElementById("num").value;
+      particles = [];
+      const vertices = new Array();
+      for (let i = 0; i < num; i++) {
+        const x = Math.floor(Math.random() * 50);
+        const y = Math.floor(Math.random() * 50);
+        const z = Math.floor(Math.random() * 50);
+        particles.push({
+          x: x,
+          y: y,
+          z: z,
+          status: 0,
+          time: 0,
+        });
+        vertices.push(x, y, z);
+      }
+      const bufferGeometry = new THREE.BufferGeometry();
+      const positions = new THREE.Float32BufferAttribute(vertices, 3);
+      bufferGeometry.setAttribute("position", positions);
+      const pointMaterial = new THREE.PointsMaterial({
+        size: 0.5,
+        color: "#FFFFFF",
+      });
+      particlesMesh = new THREE.Points(bufferGeometry, pointMaterial);
+      scene.add(particlesMesh);
+      //クラスターの作成
+      cluster = [];
+      for (let x = 0; x < 50; x++) {
+        cluster[x] = new Array();
+        for (let y = 0; y < 50; y++) {
+          cluster[x][y] = new Array(50).fill(0);
         }
+      } //核をセット
+      let cy = 25;
+      if (document.getElementById("ground").checked) cy = 0;
+      cluster[25][cy][25] = 1;
+      //シミュレーション開始
+      document.getElementById("start").disabled = true;
+      document.getElementById("stop").disabled = false;
+      time = 0;
+      update();
+    };
 
-        const setCamera= () =>{
-        //カメラ位置の変更
-            const angle = Number(document.getElementById("angle").value);
-            document.getElementById("textAngle").innerText= angle;
-            camera.position.x = 75* Math.cos(angle* Math.PI/180) + 25;
-            camera.position.y = 60;
-            camera.position.z = 75* Math.sin(angle* Math.PI/180) + 25;
-            camera.lookAt(new THREE.Vector3(25,25,25));
-            renderer.render(scene,camera);
+    //粒子のブラウン運動と凝集
+    const update = () => {
+      //粒子の座標取得
+      const pos = particlesMesh.geometry.attributes.position.array;
+      let cnt = 0;
+      for (let i = 0; i < num; i++) {
+        const p = particles[i];
+        if (p.status == 0) {
+          //粒子はxyzの方向に-1～1の範囲でランダムに移動。
+          let dx = Math.floor(Math.random() * 3) - 1;
+          let dy = Math.floor(Math.random() * 3) - 1;
+          let dz = Math.floor(Math.random() * 3) - 1;
+
+          //範囲外に出る時に跳ね返る。
+          if (p.x + dx < 0 || p.x + dx >= 50) dx *= -1;
+          if (p.y + dy < 0 || p.y + dy >= 50) dy *= -1;
+          if (p.z + dz < 0 || p.z + dz >= 50) dz *= -1;
+
+          //粒子の座標を移動
+          [p.x, p.y, p.z] = [p.x + dx, p.y + dy, p.z + dz];
+
+          //既に粒子がある場合、現在の位置に留まり、statusを1にし、
+          //時刻をtimeに保存
+          if (cluster[p.x][p.y][p.z] == 1) {
+            camera.position.x = 75 * Math.cos((angle * Math.PI) / 180) + 25;
+            [p.x, p.y, p.z] = [p.x - dx, p.y - dy, p.z - dz];
+            [p.status, p.time] = [1, time];
+            cluster[p.x][p.y][p.z] = 1;
+          }
+          [pos[i * 3], pos[i * 3 + 1], pos[i * 3 + 2]] = [p.x, p.y, p.z];
         }
+        //止まった粒子(statusが1)の数を1増やす。
+        if (p.status == 1) cnt++;
+      }
 
+      //粒子の移動を反映
+      particlesMesh.geometry.attributes.position.needsUpdate = true;
 
-        //geometry　→　幾何学、形状
-        const startDLA = () => {
-            if (particlesMesh != null) {
-                scene.remove(particlesMesh);
-                particlesMesh.material.dispose();
-                particlesMesh.geometry.dispose();
-            }
-            for (const mesh of clusterMesh) {
-                scene.remove(mesh);
-                mesh.material.dispose();
-                mesh.geometry.dispose();
-            }
-            clusterMesh = [];
-            //粒子の作成
-            num = document.getElementById("num").value;
-            particles = [];
-            const vertices = new Array();
-            for (let i = 0; i < num; i++) {
-                const x = Math.floor(Math.random() * 50);
-                const y = Math.floor(Math.random() * 50);
-                const z = Math.floor(Math.random() * 50);
-                particles.push({
-                    "x": x,
-                    "y": y,
-                    "z": z,
-                    "status": 0,
-                    "time": 0
-                });
-                vertices.push(x, y, z);
-            }
-            const bufferGeometry = new THREE.BufferGeometry();
-            const positions = new THREE.Float32BufferAttribute(vertices, 3);
-            bufferGeometry.setAttribute("position", positions);
-            const pointMaterial = new THREE.PointsMaterial({
-                size: 0.5,
-                color: "#66ccff"
-            });
-            particlesMesh = new THREE.Points(bufferGeometry, pointMaterial);
-            scene.add(particlesMesh);
-            //クラスターの作成
-            cluster = [];
-            for (let x=0; x<50; x++) {
-                cluster[x] = new Array();
-                for (let y = 0; y < 50; y++) {
-                    cluster[x][y] = new Array(50).fill(0);
-                }
-            }            //核をセット
-            let cy = 25;
-            if (document.getElementById("ground").checked) cy = 0;
-            cluster[25][cy][25] = 1;
-            //シミュレーション開始
-            document.getElementById("start").disabled = true;
-            document.getElementById("stop").disabled = false;
-            time = 0;
-            update();
+      //進捗の表示
+      //__プログレスバーを更新しパーセントを表示
+      document.getElementById("progress").value = Math.floor((cnt / num) * 100);
+      document.getElementById("per").innerText = ((cnt / num) * 100).toFixed(2);
+      time++;
+      //シミュレーション終了
+      //__全ての粒子が止まったと時
+      if (cnt == num) {
+        stopDLA();
+        setClusterMesh();
+      } else {
+        //アニメーションを行なう。
+        request = window.requestAnimationFrame(update);
+      }
+      renderer.render(scene, camera);
+    }
+
+    const setClusterMesh = () => {
+      //クラスターの3Dオブジェクトを作成
+      const spheres = new Array();
+      const materials = new Array();
+      //粒子を30色に分ける。
+      for (let i = 0; i < 30; i++) {
+        spheres[i] = new Array();
+        const hsl = `hsl(${240-i*5},100%,50%)`;
+        materials[i] = new THREE.MeshPhongMaterial({ color: hsl });
+      }
+      for (const p of particles) {
+        const t = Math.floor((p.time / time) * 30);
+        for (let i = 0; i < 9; i++) {
+          const sphere = new THREE.SphereGeometry(d[i][3], 4, 4);
+          sphere.translate(p.x + d[i][0], p.y + d[i][1], p.z + d[i][2]);
+          spheres[t].push(sphere);
         }
+      }
+      let geometry, mesh;
+      for (let i = 0; i < spheres.length; i++) {
+        if (spheres[i].length == 0) continue;
+        geometry = THREE.BufferGeometryUtils.mergeBufferGeometries(
+          spheres[i]
+        );
+        mesh = new THREE.Mesh(geometry, materials[i]);
+        scene.add(mesh);
+        clusterMesh.push(mesh);
+      }
+    };
+    const stopDLA = () => {
+      //DLAシミュレーションの停止
+      window.cancelAnimationFrame(request);
+      document.getElementById("start").disabled = false;
+      document.getElementById("stop").disabled = true;
+    };
+  </script>
+</head>
 
-        //粒子のブラウン運動と凝集
-        const update = () => {
-            //粒子の座標取得
-            const pos = particlesMesh.geometry.attributes.position.array;
-            let cnt = 0;
-            for (let i = 0; i < num; i++) {
-                const p = particles[i];
-                if (p.status == 0) {
+<body onload="init()" style="background-color: rgb(170, 151, 151)">
+  <p>3D 拡散率速凝集シミュレーション</p>
+  粒子の数：<input type="number" id="num" value="5000" step="1000" style="width: 60px" />
+  核の位置：<input type="radio" name="type" id="center" checked />中心
+  <input type="radio" name="type" id="ground" />地面
+  <input type="button" id="start" value="スタート" onclick="startDLA()" />
+  <input type="button" id="stop" value="ストップ" onclick="stopDLA()" />
+  <progress id="progress" value="0" min="0" max="100"></progress>
+  <span id="per">0.0</span>%
+  <hr />
+  カメラ：<input type="range" id="angle" value="0" min="-180" max="180" oninput="setCamera()" />[<span
+    id="textAngle">0</span>°]
+  <hr />
+  <div id="renderArea"></div>
+</body>
 
-                    //粒子はxyzの方向に-1～1の範囲でランダムに移動。
-                    let dx = Math.floor(Math.random() * 3) - 1;
-                    let dy = Math.floor(Math.random() * 3) - 1;
-                    let dz = Math.floor(Math.random() * 3) - 1;
-
-                    //範囲外に出る時に跳ね返る。
-                    if ((p.x + dx < 0) || (p.x + dx >= 50)) dx *= -1;
-                    if ((p.y + dy < 0) || (p.y + dy >= 50)) dx *= -1;
-                    if ((p.z + dz < 0) || (p.z + dz >= 50)) dx *= -1;
-
-                    //粒子の座標を移動
-                    [p.x, p.y, p.z] = [p.x + dx, p.y + dy, p.z + dz];
-
-                    //既に粒子がある場合、現在の位置に留まり、statusを1にし、
-                    //時刻をtimeに保存
-                    if (cluster[p.x][p.y][p.z] == 1) {
-                        camera.position.x = 75* Math.cos(angle* Math.PI/180) + 25;
-                        [p.x, p.y, p.z] = [p.x - dx, p.y - dy, p.z - dz];
-                        [p.status, p.time] = [1, time];
-                        cluster[p.x][p.y][p.z] = 1;
-                    }
-                    [pos[i * 3], pos[i * 3 + 1], pos[i * 3 + 2]] = [p.x, p.y, p.z];
-                }
-                //止まった粒子(statusが1)の数を1増やす。
-                if (p.status == 1) cnt++;
-            }
-        }
-        //粒子の移動を反映
-        particlesMesh.geometry.attributes.position.needsUpdate = true;
-
-        //進捗の表示
-        //__プログレスバーを更新しパーセントを表示
-        document.getElementById("progress").value = Math.floor(cnt / num * 100);
-        document.getElementById("per").innerText = (cnt / num * 100).toFixed(2);
-        time++;
-        //シミュレーション終了
-        //__全ての粒子が止まったと時
-        if (cnt == num) {
-            stopDLA();
-            setClusterMesh();
-        } else {
-            //アニメーションを行なう。
-            request = window.requestAnimationFrame(update);
-        }
-        renderer.renderer(scene, camera);
-
-        const setClusterMesh = () => {
-            //クラスターの3Dオブジェクトを作成
-            const spheres = newArray();
-            const materials = newArray();
-            //粒子を30色に分ける。
-            for (let i = 0; i < 30; i++) {
-                spheres[i] = newArray();
-                const hsl = `hsl($240-i*5),100%,50%)`;
-                materials[i] = new THREE.MeshPhongMaterial({ color: hsl });
-            }
-            for (const p of particles) {
-                const t = Math.floor(p.time / time * 30);
-                for (let i = 0; i < 9; i++) {
-                    const sphere = new THREE.SphereGeometry(d[i][3], 4, 4);
-                    sphere.translate(p.x + d[i][0], p.y + d[i][1], p.z + d[i][2]);
-                    spheres[t].push(sphere);
-                }
-            }
-            let geometry, mesh;
-            for (let i = 0; i < spheres.length; i++) {
-                if (spheres[i].length == 0) continue;
-                geometry = THREE.BufferGeometryUtils.mergeBufferGeometries(spheres[i]);
-                mesh = new THREE.Mesh(geometry, materials[i]);
-                scenes.add(mesh);
-                clusterMesh.push(mesh);
-            }
-        }
-const stopDLA = () =>{
-    //DLAシミュレーションの停止
-    window.cancelAnimationFrame(request);
-    document.getElementById("start").disabled = false;
-    document.getElementById("stop").disabled = true;
-}
-</script>
-    </head>
-    <body onload="init()" style="background-color:rgb(170, 151, 151)">
-        <p>3D 拡散率速凝集シミュレーション</p>
-        粒子の数：<input type="number" id="num" value="5000" step="1000"
-            style="width: 60px">
-        核の位置：<input type="radio" name="type" id="center" checked>中心
-        <input type="radio" name="type" id="ground">地面
-        <input type="button" id="start" value="スタート" onclick="startDLA()">
-        <input type="button" id="stop" value="ストップ" onclick="stopDLA()">
-        <progress id="progress" value="0" min="0" max="100"></progress>
-        <span id="per">0.0</span>%<hr>
-        カメラ：<input type="range" id="angle" value="0" min="-180" max="180"
-            oninput="setCamera()">[<span id="textAngle">0</span>°]<hr>
-        <div id="renderArea"></div>
-    </body>
 </html>
