--- a/PictureTo3D/PictureTo3D.html
+++ b/PictureTo3D/PictureTo3D.html
@@ -69,6 +69,7 @@
         }
 
 
+
         const setCamera = (front = false) => {
             //※↑　frontのデフォルト値はfalse
             //カメラ位置の変更
@@ -88,40 +89,138 @@
             // 画像の読み込み
             const image = new Image();
             image.src = URL.createObjectURL(files[0]);
-            image.onload = () =>{
+            image.onload = () => {
                 //画像の描画
-                let sx,sy,sw;
-                if (image.width > image.height){
-                    sw  = image.width;
-                    [sx,sy] = [0,image.height/2 - image.width/2];
-                }else{
-                    sw  = image.height;
-                    [sx,sy] = [0,image.width/2 - image.height/2];
+                let sx, sy, sw;
+
+                //読み込んだ画像の長辺を一辺とした正方形とし、キャンパスの中心に表示されるよう座標を計算
+                if (image.width > image.height) {
+                    sw = image.width;
+                    [sx, sy] = [0, image.height / 2 - image.width / 2];
+                } else {
+                    sw = image.height;
+                    [sx, sy] = [0, image.width / 2 - image.height / 2];
                 }
-                context.fillStyle = "#FFFFFF";
-                context.fillRect(0,0,w,w);
-                context.drawImage(image,sx,sy,sw,sw,0,0,w,w);
+                context.fillStyle = "#FFFFFF"; //画像用キャンバスの背景色は白
+                context.fillRect(0, 0, w, w);
+                context.drawImage(image, sx, sy, sw, sw, 0, 0, w, w);
                 //ハーフトーン加工
                 setHalftone();
+            }
+        }
+
+        const setHalftone = () => {
+            //ハーフトーン加工、点描の作成
+            const imageData = context.getImageData(0, 0, w, w);
+            monoConst.clearRect(0, 0, w, w);
+            monoConst.fillStyle = "#000000"; //モノクロキャンバスの塗りつぶし色は黒
+            Scene.remove(points);
+            const geometry = new THREE.Geometry;
+            const material = new THREE.MeshPhongMaterial({ color: "#ffffff" });
+            //画像を分割した一片の長さ(240/60Z=40)
+            const d = w / num;
+
+            //画像を60*60に分割して走査
+            for (var y = 0; y < w; y += d) {
+                for (var x = 0; x < w; x += d) {
+                    //4*4の範囲の平均輝度を求める
+                    const l = getLuminance(imageData, x, y, d);
+                    const r = d - l * d;
+                    mponoCont4ext.beginPath();
+                    monoContext.arc(x + d / 2, y + d / 2, r, 0.2 * Math.PI);
+                    monoCOntext.fill();
+                    //点(球)を追加
+                    //__平均輝度が0.1より大きい場合
+                    if (l > 0.1) {
+                        //__球の3次元座標を計算
+                        const px = -num * 2 * (1 - l);
+                        const py = num - y / d * 2;
+                        const pz = num - x / d * 2;
+                        //__平均輝度を半径とした白い球を作成
+                        const sphere = new THREE.SphereGeometry(1, 4, 4);
+                        const point = new THREE.Mesh(shpere);
+                        point.position.set(px, py, pz);
+                        //__球のオブジェクトを結合する。
+                        geometry.mergeMesh(point);
+                    }
                 }
             }
+            points = new THREE.Mesh(geometry, material);
+            scene.add(points);
+        }
 
-            const setHalftone = () =>{
-
+        const getLuminance = (imageData, x, y, d) => {
+            //RGBの平均値を取得
+            let [r, g, b] = [0, 0, 0];
+            for (let dy = 0; dy < d; dy++) {
+                for (let dx = 0; dx < d; dx++) {
+                    const index = ((x + dx) + (y + dy) * W) * 4;
+                    //__RGBごとに領域内の色をすべて足す
+                    r += imageData.data[index];
+                    g += imageData.data[index + 1];
+                    b += imageData.data[index + 2];
+                }
             }
+            //__色の平均値を求める
+            [r, g, b] = [r / (d * d), g / (d * d), b / (d * d)];
+            //輝度を返す
+            //__色を輝度に変換して返す
+            return (0.299 * r + 0.587 * g + 0.114 * b) / 256;
+        }
 
-
-
-
-
-
-
-
+        const update = () => {
+            //回転
+            //__回転チェックボックスがチェックされているならば
+            if (document.getElementById("rotate").checked) {
+                let angle = Number(document.getElementById("angle").value);
+                //__角度を-180～180の範囲で0.1ずつ動かす
+                angle += 0.1;
+                if (angle > 180) angle -= 360;
+                document.getElementById("angle").value = angle;
+                setCamera();
+            }
+            //描画
+            renderer.renderer(scene, camera);
+            //__アニメーションを行なう
+            window.requestAnimationFrame(update);
+        }
     </script>
+    <style>
+        body {
+            background-color: #333333;
+            color: #FFFFFF;
+        }
+
+        #renderArea {
+            /* 回り込みあり、左寄せ　右外側空白10px */
+            float: left;
+            margin-right: 10px;
+        }
+
+        /* キャンバスの枠線色：グレー */
+        canvas {
+            border: thin solid #cccccc;
+        }
+
+    </style>
 </head>
 
-<body>
-
+<body onload="init()">
+    <p>3D点描（ハーフトーン）</p>
+    <hr>
+    <!-- __正面に戻すボタン -->
+    カメラ：<input type="button" value="正面に戻す" onclick="setCamera(true)">
+    <!-- __回転チェックボックス、角度スライダー -->
+    <input type="checkbox" id="rotate">回転
+    <input type="range" id="angle" value="0" min="-180" max="180" step="0.1" oninput="setCamera()">
+    <span id="textAngle">[90°]</span>
+    <hr>
+    <!--  __描画エリア-->
+    <div id="renderArea"></div>
+    <!-- ファイル選択ボタン -->
+    <input type="file" accept="image/*" onchange="loadImage(this.files)"><br>
+    <canvas id="image"></canvas><br>
+    <canvas id="mono"></canvas>
 </body>
 
 </html>
